# casaba

./: .gitignore  MANIFEST.in  README.md  requirements.txt  run_tests.sh  setup.cfg  tox.ini
casaba/: version.py
casaba/installer/: basedefs.py  exceptions.py  output_messages.py  processors.py  run_setup.py  setup_controller.py
casaba/installer/core/: drones.py
casaba/installer/utils/: shell.py  shortcuts.py
casaba/modules/: common.py  ospluginutils.py  puppet.py  sorteddict.py
casaba/plugins/: __example_002.py  api_001.py  prescript_000.py
casaba/puppet/modules/casaba/: Gemfile  Puppetfile  Rakefile
casaba/puppet/modules/casaba/example/: masternode.pp
casaba/puppet/modules/casaba/hiera/: hiera.yaml  uoc.yaml
casaba/puppet/modules/casaba/lib/facter/: userkeys.rb
casaba/puppet/modules/casaba/manifests/: puppetmaster.pp
docs/: Makefile  casaba.rst  conf.py
