[metadata]
name = casaba
summary = A utility to install OpenStack
description-file = README.md
author = Xingchao Yu
author-email = yuxcer@gmail.com
home-page = http://nops.cloud/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    casaba

data_files =
    share/casaba = docs/casaba.rst

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs

[pbr]
warnerrors = True
autodoc_tree_index_modules = True

[entry_points]
console_scripts =
    casaba = casaba.installer.run_setup:main

